--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
+	"homepage": "https://ballowfruit.github.io",
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
 		"lint": "eslint .",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
 		"react": "^18.3.1",
-		"react-dom": "^18.3.1"
+		"react-dom": "^18.3.1",
+		"gh-pages": "^4.0.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.13.0",
